# sex_support_web

./: readme.md
docs/docs/: astro.config.mjs  deploy.md  package.json  pnpm-lock.yaml  rst2md.py
docs/docs/src/styles/: custom.css
docs/get_docs/: .gitignore
docs/get_docs/se7/: VERSION_FILE  process_docs.py
docs/get_docs/se9/: RELEASE_VERSION  merge_rst.py
docs/rag_data_cleaning/: .gitignore  README.md  SKILLS.md  config.json.template  llm_cleaner.bak.py  llm_cleaner.py
docs/save_docs/se7/: bmcv参考文档_clear.md  libsophon_clear.md  sophon-img_clear.md  sophon-mw_clear.md  sophon-sail_clear.md  sophon-testhub_clear.md  tpu-mlir_clear.md
docs/save_docs/sophon-demo/chinese_docs/: root.md  root_sample.md  root_tutorial.md
docs/save_docs/sophon-tools/docs/: pSophUI.md  pautotelecomm.md  pbm_set_ip.md  pbmsec_zh.md  pdfss_cpp.md  pget_info.md  pget_info_exporter.md  pmem_aging_test.md  pmemory_edit.md  pmulti_video_qt.md  pota_update.md  pqt_batch_deployment.md  pqt_memory_edit.md  psocbak.md  psoph_phytool.md  pspacc_efuse_demo.md  sophon-tools.md
mxbot/cinny/: DEPLOYMENT.md  Dockerfile  README.md  config.json  docker-nginx.conf  index.html  netlify.toml  package-lock.json  package.json  vite.config.js  wrangler.toml
mxbot/cinny/.github/: dependabot.yml
mxbot/cinny/.github/workflows/: build-pull-request.yml  deploy-pull-request.yml  docker-pr.yml  netlify-dev.yml  (+1 more)
mxbot/cinny/src/: index.css  index.tsx  sw-session.ts  sw.ts
mxbot/matrix_auto_connect_bot/: .env.example  .gitignore  Cargo.toml  readme.md
mxbot/matrix_auto_connect_bot/src/: main.rs
(+477 files in other folders)
